Add guiContextBox and improve screen composition